--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,12 @@
+home:
+  path: /
+  controller: App\Controller\HomeController::index
+
+
+
+
+
+
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
